# solvulk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  resources.rc  vcpkg.json
app/: game.c  game.h  linmain.c  main.c
app/client/: game.c  game.h  linmain.c  main.c
app/server/: main.c  server.h
assets/: res.rc  resources.rc
assets/fonts/: atlas.json  atlas.raw
assets/images/: .Cloud1.webp-autosave.kra  .HealthTexture.webp-autosave.kra  .Pistol.png-autosave.kra  .SpikeParticle.png-autosave.kra  BlackCloud.webp~  Border.webp~  Cloud2.webp~  CloudParticle.png~  FireParticle.png~  HealthTexture.webp~  LaserCard.webp~  LightningVert2.webp~  LightningVert3.webp~  SpikeParticle.png~  SpikeParticle2.png~
assets/models/: Box.glb  Dude.glb  WeaponBlade.glb  Wizard.glb  Wizard.gltf  World0.glb  World1.glb  World2.glb  World6.glb  Zorgon.glb
assets/shaders/: basic2d.vert.spv  basic3d.frag.spv  basic3d.vert.spv  basicrect.frag.spv  basicrect.vert.spv  basictext.vert.spv  basictextfrag.frag.spv  batched_rect.vert.spv  billboard.frag.spv  billboard.vert.spv  fireball.frag.spv  fireball1.frag.spv  font.frag.spv  font2d.vert.spv  healthbar.frag.spv  line.vert.spv  model.frag.spv  model.vert.spv  model_skinned.vert.spv  quad.frag.spv  quad.vert.spv  rect.frag.spv  rect.vert.spv  recti.frag.spv  recti.vert.spv  ribbon.vert.spv  skybox.frag.spv  skybox.vert.spv  sphere.frag.spv  sphere.vert.spv  sprite.frag.spv  text.frag.spv  text.vert.spv  text3d.frag.spv  triangle.vert  triangle.vert.spv
assets/sounds/: Laser.mp3.asd  Laser.wav.asd  WoodCock.mp3.asd
include/: debug.h  input.h  loader.h  render.h  sol.h  sol_functions.h  sol_movement.h  solmath.h  world.h
include/sol/: base.h  base_types.h  common.h  components.h  debug.h  emitter_types.h  functions.inc  input.h  math.h  model_types.h  movement.h  platform.h  profiler.h  render.h  sol.h  types.h  world.h
includes/: button.h  camera.h  element.h  files.h  input.h  loader.h  model.h  render.h  sol.h  sol_load_types.h  soldef.h  solglobals.h  solmath.h  solvk.h  systems.h  world.h
server/: main.c  server.h
src/: main.c
src/_core/: camera.c  camera.h  debug.c  debug.h  estate.h  input.c  input.h  loader.c  loader.h  math.c  network.c  network.h  platform.h  prefabs.c  resource.h  sol_bank.c  sol_bank.h  sol_core.c  sol_core.h  sol_math.c  sol_math.h  texture.h  world.c  world.h
src/_core/interact/: interact.h  s_interact.c
src/_internal/: debug_i.h  input_i.h  internal_debug.h  internal_math.h  internal_movement.h  internal_physx.h  internal_platform.h  internal_render.h  internal_types.h  internal_world.h  loader.h  loader_i.h  math_i.h  profiler_i.h  render.h  render_i.h  sol_core.h
src/ability/: ability.c  ability.h  s_ability.c  state_abikity_claw.c  state_ability_dash.c  state_ability_idle.c
src/app/: app.h  game.c  main.c  menu.c
src/audio/: audio.c  audio.h
src/buff/: buff.h
src/camera/: camera.c  camera.h
src/combat/: combat.c
src/config/: config_ability.c  config_fx.c  config_model.c  config_move.c
src/controller/: controller.c  controller.h  s_controller.c
src/core/: app.c  audio.c  audio.h  camera.c  debug.c  estate.h  files.c  font.c  font.h  font_util.c  image.c  image.h  input.c  input.h  loader.c  math.c  model.c  model.h  model_util.c  network.c  network.h  prefabs.c  profiler.h  render.c  sol_core.c  sol_core.h  sol_engine.c  sol_engine.h  sol_math.c  sol_math.h  solmath.c  vk_init.c  vkrender.c  world.c  world.h
src/core/render/: render.c  render.h
src/emitter/: emitter.c  emitter.h  emitter_types.h
src/estates/: ability_states.h  astate_idle.c  estate.h  move_states.h  state_claw.c  state_dash.c  state_fall.c  state_fly.c  state_idle.c  state_jump.c  state_walk.c
src/event/: event.c  event.h  event_types.h
src/font/: font.c  font.h  font_i.h  font_util.c
src/game/: prefabs.c  prefabs.h
src/include/: render_internal.h  sol_core.h
src/maths/: physx.c  physx.h  sol_math.c  sol_math.h
src/model/: model.c  model.h  model_config.c  model_i.h  model_util.c  s_model.c
src/modules/camera/: camera.c
src/modules/controller/: playercontroller.c  playercontroller.h
src/modules/physx/: physx.c  physx.h
src/movement/: movement.c  movement.h  movement_utils.c  s_movement.c  state_dash.c  state_fall.c  state_fly.c  state_idle.c  state_jump.c  state_walk.c
src/physx/: physx.c  physx.h  physx_model.c  physx_utils.c  s_physx.c
src/pickup/: pickup.c
src/platform/: platform.h
src/render/: camera.c  camera.h  render.c  render.h  render_billboard.c  render_camera.c  render_font.c  render_i.h  render_instances.c  render_internal.h  render_line.c  render_model.c  render_quad.c  render_skybox.c  render_sphere.c  render_sprite.c  render_types.h  vk_init.c
src/resource/: bank.c  font.c  image.c  load_model.c  load_texture.c  model.c  model.h  resource.h
src/shaders/: basic2d.vert  basic3d.frag  basic3d.vert  basicrect.frag  basicrect.vert  basictextfrag.frag  batched_rect.vert  line.vert  model.frag  model.vert  model_skinned.vert  sphere.frag  sphere.vert  text.frag  text.vert  triangle.vert
src/singles/: debug.c  input.c  loader.c  render.c  vk_init.c  vk_init.h  vk_init_types.h
src/systems/: ability_system.c  aicontroller.c  buff.c  camera.c  controller.c  controller_system.c  emitter.c  interact.c  interact_system.c  line.c  model_system.c  movement_system.c  physx_system.c  s_audio.c  s_buff.c  s_camera.c  s_combat.c  s_controller.c  s_emitter.c  s_event.c  s_interact.c  s_line.c  s_model.c  s_pickup.c  s_shape.c  s_sphere.c  s_timer.c  s_ui.c  s_vital.c  sphere_system.c  timer_system.c  uiview_system.c  vital_system.c  xform_system.c
src/texture/: texture.c  texture.h
src/timer/: timer.c
src/ui/: button.c  element.c
src/utils/: solmath.c  solmath.h
src/view/: sphere.c  uiview.c
src/world/: components.h  prefabs.c  world.c  world.h
src/worlds/: game.c  menu.c
src/xform/: s_xform.c
tools/: notes.txt  paste_dump.md  physExample.md  styleguide.md
tools/notes/: notes.md  paste_dump.md  physExample.md
(+325 files in other folders)
